--- a/LearnDataStruct.vcxproj.filters
+++ b/LearnDataStruct.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Sort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="StringMatch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
